# plugin

./: README.md
plugin_api/: Cargo.toml  build.rs
plugin_api/src/: allocator.rs  lib.rs  registrar.rs
tidb_query/: Cargo.toml
tidb_query/src/: lib.rs
tikv/: Cargo.toml
tikv/src/: main.rs  plugin_manager.rs
