[package]
name = "tidb_query"
version = "0.1.0"
authors = ["andylokandy <andylokandy@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plugin_api = { path = "../plugin_api" }
futures = "0.3"

[lib]
crate-type = ["dylib"]
