[package]
name = "tikv"
version = "0.1.0"
authors = ["andylokandy <andylokandy@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plugin_api = { path = "../plugin_api" }
libloading = "0.6"
futures = "0.3"
tokio = { version = "0.3", features = ["time", "rt", "rt-multi-thread"] }