[package]
name = "tikv"
version = "0.1.0"
authors = ["andylokandy <andylokandy@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4"
plugin_api = { path = "../plugin_api", features = ["host"] }
libloading = "0.6"
futures = "0.3"
semver = "0.11"
tokio = { version = "0.3", features = ["time", "rt", "rt-multi-thread"] }
